UX: prevent horizontal scrollbar on #main-outlet
Core now has more consistent padding on both desktop and mobile. The old value in this component caused a horizontal scroll bar to appear when the screen width is less than 1145px. This commit updates the value to match core.

--- a/common/common.scss
+++ b/common/common.scss
@@ -105,10 +105,7 @@
 
 #main-outlet {
   flex: 1 0 auto;
-  max-width: calc(100% - 16px);
-  .mobile-view & {
-    max-width: calc(100% - 20px);
-  }
+  max-width: calc(100% - 20px);
   width: $large-width;
 }
 
